desenv_tests/test-assets/field/failure/default_value_not_string.stderr
error: `default.value` modifier must contain a string literal
 --> test-assets/field/failure/default_value_not_string.rs:5:30
  |
5 |     #[desenv(default(value = ','))]
  |                              ^^^
